tests/fixtures/invalid/errors/at_in_const.gcl
// Graph reference to runtime param in const expression: @x not allowed
param x: Dimensionless = 1.0;
const node bad: Dimensionless = @x + 1.0;
